
class Attempt {

	public Attempt(SecretCombination secretCombination) {
		// TODO Auto-generated constructor stub
	}

	public boolean isWinner() {
		// TODO Auto-generated method stub
		return false;
	}
	
	@Override
	public String toString() {
		return null;
	}

}
