
public enum Color {
	
	RED('r'),
	GREEN('g'),
	BLUE('b'),
	YELLOW('y'),
	ORANGE('o'),
	PINK('p');

	Color(char c) {
		
	}

	public static String getAvailableColors() {
		return null;
	}
	
	public static Color getColorByChar(char charColor) {
		return null;
	}
	
	public boolean isSameColorAs(Color color) {
		return false;
	}
	
	@Override
	public String toString() {
		return null;
	}

}
