
abstract class Combination {
	
	private Color[] colors;
	
	Combination() {
		
	}
	
	@Override
	public String toString() {
		return null;
	}

}
