
public class Console {
	
	public void write(String promptMessage) {
		
	}
	
	public String read(String promptMessage) {
		return null;
	}

}
