
class Mastermind {

	public Mastermind() {
		
	}
	
	public void play() {
		
	}

	public static void main(String[] args) {
		
	}

}
