
class ProposedCombination extends Combination {

	ProposedCombination() {}
	
	public void read() {
		
	}
}
