
public class Result {
	
	Result(int whites, int blacks) {
		
	}
	
	public int getWhites() {
		return 0;
	}
	
	public int getBlacks() {
		return 0;
	}

}
