
class SecretCombination extends Combination {
	
	SecretCombination() {
		
	}
	
	public Result evalueCombination(ProposedCombination proposed) {
		return null;
	}
	
	@Override
	public String toString() {
		return null;
	}

}
